# VectorVision-SVGV

./: .gitignore  README.md  build.gradle  build_app.sh  gradlew  index.html  indrx.html  install_sdk.sh  settings.gradle
.github/workflows/: android-release.yml
.idx/: dev.nix
apk_deploy/: index.html
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: red_circle.svgc
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  svgc-decoder.cpp  svgc_header.h  svgc_protocol.cpp  svgv_engine.cpp
app/src/main/java/com/vectorvision/: GalleryAdapter.kt  MainActivity.kt
app/src/main/java/com/vectorvision/demo/: MainActivity.kt  MediaFile.kt  SvgcDecoder.kt  SvgcFetcher.kt  SvgcModelLoader.kt  SvgvDecoder.kt  SvgvFetcher.kt  SvgvModelLoader.kt  VectorVisionGlideModule.kt
app/src/main/java/com/vectorvision/demo/ui/: GeometricSurfaceView.kt
app/src/main/res/drawable/: ic_shutter.xml  ic_video.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_gallery.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: backup_rules.xml  provider_paths.xml
